--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "gymme-landing",
+  "homepage": "https://Ezmaa.github.io/Gym-Landing",
+  "name": "gym-landing",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -38,6 +41,7 @@
   "devDependencies": {
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.8",
+    "gh-pages": "^5.0.0",
     "postcss": "^8.4.16",
     "react-icons": "^4.4.0",
     "swiper": "^8.3.2",
