--- a/server/package.json
+++ b/server/package.json
@@ -4,22 +4,25 @@
     "description": "",
     "main": "server.js",
     "scripts": {
-      "start": "node server.js",
-      "watch": "nodemon",
-      "seed": "node seeders/seed.js"
+        "start": "node server.js",
+        "watch": "nodemon",
+        "seed": "node seeders/seed.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "apollo-server-express": "^3.6.2",
-      "bcrypt": "^5.0.0",
-      "express": "^4.17.2",
-      "graphql": "^16.3.0",
-      "jsonwebtoken": "^8.5.1",
-      "mongoose": "^6.1.8"
+        "apollo-server-express": "^3.6.2",
+        "bcrypt": "^5.0.0",
+        "body-parser": "^1.20.2",
+        "dotenv": "^16.1.0",
+        "express": "^4.17.2",
+        "graphql": "^16.3.0",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^6.1.8",
+        "nodemailer": "^6.9.3"
     },
     "devDependencies": {
-      "nodemon": "^2.0.21"
+        "nodemon": "^2.0.21"
     }
-  }
+}
