changed homepage on startup

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Ezmaa.github.io/Gym-Landing",
+  "homepage": "https://Ezmaa.github.io/",
   "name": "gym-landing",
   "version": "0.1.0",
   "private": true,
