--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
         "graphql": "^16.3.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.1.8",
-        "nodemailer": "^6.9.3"
+        "nodemailer": "^6.9.3",
+        "stripe": "^12.8.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.21"
